automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -671,7 +671,8 @@
     "    # Create alist for mode values\n",
     "    modes = []\n",
     "    t_list = list(d.items())\n",
-    "    \n",
+    "    for pair in t_list:\n",
+    "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
     "\n",
     "    # Return the mode list \n",
