automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -671,7 +671,7 @@
     "    # Create alist for mode values\n",
     "    modes = []\n",
     "    t_list = list(d.items())\n",
-    "    sort_list = sorted(t_list, key)\n",
+    "    sort_list = sorted(t_list, key = lambda x: x[1], rever)\n",
     "    for pair in sort_list:\n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
