--- a/index.ipynb
+++ b/index.ipynb
@@ -671,8 +671,10 @@
     "    # Create alist for mode values\n",
     "    modes = []\n",
     "    t_list = list(d.items())\n",
-    "    sort_list = sorted(t_list, key = lambda x: x[1], reverse = )\n",
+    "    sort_list = sorted(t_list, key = lambda x: x[1], reverse = True)\n",
+    "    \n",
     "    for pair in sort_list:\n",
+    "        \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
     "\n",
