automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -670,7 +670,7 @@
     "    \n",
     "    # Create alist for mode values\n",
     "    modes = []\n",
-    "    t_list = list(d.items())\n",
+    "    t_list = list(frequency_dict.items())\n",
     "    sort_list = sorted(t_list, key = lambda x: x[1], reverse = True)\n",
     "    \n",
     "    for pair in sort_list:\n",
