automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -674,7 +674,8 @@
     "    sort_list = sorted(t_list, key = lambda x: x[1], reverse = True)\n",
     "    \n",
     "    for pair in sort_list:\n",
-    "        if \n",
+    "        if modes == []:\n",
+    "            modes.append\n",
     "        \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
