automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -672,11 +672,11 @@
     "    modes = []\n",
     "    t_list = list(frequency_dict.items())\n",
     "    sort_list = sorted(t_list, key = lambda x: x[1], reverse = True)\n",
-    "    \n",
+    "    numb = 0\n",
     "    for pair in sort_list:\n",
     "        if modes == []:\n",
     "            modes.append(pair[0])\n",
-    "            \n",
+    "            numb = \n",
     "        elif \n",
     "        \n",
     "        \n",
