automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -678,7 +678,7 @@
     "            modes.append(pair[0])\n",
     "            numb = pair[1]\n",
     "        elif:\n",
-    "            \n",
+    "            pair[1] ==\n",
     "            \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
