automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -677,8 +677,7 @@
     "        if modes == []:\n",
     "            modes.append(pair[0])\n",
     "            numb = pair[1]\n",
-    "        elif:\n",
-    "            pair[1] ==\n",
+    "        elif pair[1] == numb:\n",
     "            \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
