automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -678,7 +678,8 @@
     "            modes.append(pair[0])\n",
     "            numb = pair[1]\n",
     "        elif pair[1] == numb:\n",
-    "            modes.append()\n",
+    "            modes.append(pair[1])\n",
+    "        e\n",
     "            \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
