automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -647,7 +647,7 @@
      "output_type": "stream",
      "text": [
       "[5]\n",
-      "[1]\n"
+      "[1, 5]\n"
      ]
     }
    ],
@@ -678,8 +678,9 @@
     "            modes.append(pair[0])\n",
     "            numb = pair[1]\n",
     "        elif pair[1] == numb:\n",
-    "            modes.append(pair[1])\n",
-    "        e\n",
+    "            modes.append(pair[0])\n",
+    "        else:\n",
+    "            break\n",
     "            \n",
     "        \n",
     "    #from the dictionary, add element(s) to the modes list with max frequency\n",
